updated the verel.json

--- a/vercel.json
+++ b/vercel.json
@@ -7,8 +7,10 @@
             "config": {"runtime": "python 3.6"}
         }
     ],
-    "routes": {
-        "src": "/(.*)",
-        "dest": "/index.py"
-    }
+    "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "/index.py"
+        }
+    ]
 }
