--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
     "builds": [
         {
             "src": "wsgi.py",
-            "use": "@vercel/python",
-            "config": {"runtime": "python 3.6"}
+            "use": "@vercel/python"
         }
     ],
     "routes": [
